test/wordpress-ingress/wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - wordpress.testing.freestyleiot.com
    secretName: wordpress-tls
  rules:
  - host: wordpress.testing.freestyleiot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
